--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentsManager"
         tools:targetApi="31">
+
+        <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- AddUpdateStudentActivity -->
+        <activity
+            android:name=".AddUpdateStudentActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
